# arduino-corelib

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  meson.build
core/: Arduino.cpp  Arduino.h  CMakeLists.txt  HardwareSerial.cpp  HardwareSerial.h  HardwareSerial0.cpp  HardwareSerial1.cpp  HardwareSerial_private.h  InterruptLock.h  Print.cpp  Print.h  Serial.cpp  Serial.h  Stream.cpp  Stream.h  hooks.c  wiring.c  wiring.cpp  wiring_private.h
core/chips/: CMakeLists.txt  atmega168.h  atmega324p.h  atmegaxx4.h  chip.h  pinmap.cpp  pinmap.h
